# utopia

./: .metadata  BUILD.gn  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  analysis_options.yaml  pubspec.yaml
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: submodule.yml
android/app/: build.gradle
example/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: calculator.dart  example.dart  extraMath.dart  main.dart  mobile_taskbar.dart  overlay_builder.dart  pageController.dart  shell.dart  statusbar.dart  taskbar.dart  taskbar_item.dart  toolbar.dart  wallpaper_layer.dart  window_switcher.dart
example/lib/apps/: apps.dart  (+1 more)
example/linux/: CMakeLists.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: example.dart  main.dart  mobile_taskbar.dart  statusbar.dart  taskbar.dart  taskbar_item.dart  wallpaper_layer.dart  wm.dart  wm_new.dart
lib/src/: dismissible_overlay.dart  dismissible_overlay_entry.dart  entry.dart  hierarchy.dart  layout.dart  properties.dart  registry.dart  window.dart  window_entry.dart  window_hierarchy.dart  window_resize_gesture_detector.dart  window_toolbar.dart
lib/wm/: window.dart  window_entry.dart  window_hierarchy.dart  window_resize_gesture_detector.dart  window_toolbar.dart
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+37 files in other folders)
