# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/dart/dart_library.gni")

dart_library("utopia") {
  package_name = "utopia_wm"
  null_safe = true

  sources = [
    "wm_new.dart",
    "src/entry.dart",
    "src/hierarchy.dart",
    "src/properties.dart",
    "src/registry.dart",
    "src/features/base.dart",
    "src/features/features.dart",
    "src/features/focusable.dart",
    "src/features/geometry.dart",
    "src/features/resize.dart",
    "src/features/surface.dart",
    "src/features/toolbar.dart",
  ]

  deps = [
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//third_party/dart-pkg/pub/provider",
    "//third_party/dart-pkg/pub/uuid",
  ]
}